--- a/pages/workbook/tenzies.mdx
+++ b/pages/workbook/tenzies.mdx
@@ -21,11 +21,11 @@ And follow the prompts. For more details, check [here](https://vitejs.dev/guide/
 Now, run your code!
 
 <Quiz
-    question="What do you see on the page after running 'npm run dev'?"
-    choices={[`Next + Vite`, `Vite + React`, `React + Vite`]}
-    correctAnsIndex={1}
-    correctMessage="Nice! Let's go!"
-    wrongMessage="Oops! Try again!"
+  question="What do you see on the page after running 'npm run dev'?"
+  choices={[`Next + Vite`, `Vite + React`, `React + Vite`]}
+  correctAnsIndex={1}
+  correctMessage="Nice! Let's go!"
+  wrongMessage="Oops! Try again!"
 />
 
 Alright! Let's get started!
@@ -36,14 +36,55 @@ Tenzies is a game where the player must match 10 dice having the same number on 
 
 Now that we understand what we're going to do, let's begin coding!
 
-Before we start coding, let's clean up our folder and only leave the files we need. So after clean up, the folder sturcture will be like this
+Before we start coding, let's clean up our folder and only leave the files we need. So after clean up, the folder structure will be like this:
 
 <Pic
-    src="https://raw.githubusercontent.com/xyntechx/NexLiber-Projects/main/Tenzies/tenzies-assets/tenzies-project-folder-structure.PNG"
-    alt="Tenzies Project Structure"
-    width={233}
-    height={490}
+  src="https://raw.githubusercontent.com/xyntechx/NexLiber-Projects/main/Tenzies/tenzies-assets/tenzies-project-folder-structure.PNG"
+  alt="Tenzies Project Folder Structure"
+  width={233}
+  height={490}
 />
+
+In the hooks folder, we will be creating a custom hook which we would use later down the line. Create a **windowSize.tsx** file and add the following code there.
+
+```javascript
+import { useEffect, useState } from "react";
+
+// Define general type for useWindowSize hook, which includes width and height
+interface Size {
+  width: number | undefined;
+  height: number | undefined;
+}
+
+export default function useWindowSize(): Size {
+  // Initialize state with undefined width/height so server and client renders match
+  // Learn more here: https://joshwcomeau.com/react/the-perils-of-rehydration/
+  const [windowSize, setWindowSize] =
+    useState <
+    Size >
+    {
+      width: undefined,
+      height: undefined,
+    };
+  useEffect(() => {
+    // Handler to call on window resize
+    function handleResize() {
+      // Set window width/height to state
+      setWindowSize({
+        width: window.innerWidth,
+        height: window.innerHeight,
+      });
+    }
+    // Add event listener
+    window.addEventListener("resize", handleResize);
+    // Call handler right away so state gets updated with initial window size
+    handleResize();
+    // Remove event listener on cleanup
+    return () => window.removeEventListener("resize", handleResize);
+  }, []); // Empty array ensures that effect is only run on mount
+  return windowSize;
+}
+```
 
 In our App.ts, let's put the following code.
 
@@ -51,15 +92,15 @@ In our App.ts, let's put the following code.
 import React from "react";
 
 export default function App() {
-    return (
-        <main>
-            <h1 className="title">Tenzies</h1>
-            <p className="instruction">
-                Roll until all dice are the same. Click each die to freeze it at
-                its current value between rolls
-            </p>
-        </main>
-    );
+  return (
+    <main>
+      <h1 className="title">Tenzies</h1>
+      <p className="instruction">
+        Roll until all dice are the same. Click each die to freeze it at its
+        current value between rolls
+      </p>
+    </main>
+  );
 }
 ```
 
@@ -67,108 +108,108 @@ And in the index.css, add the following css codes so we don't focus on writing c
 
 ```css
 :root {
-    --dark: #0b2434;
-    --light: #f5f5f5;
-    --green: #59e391;
-    --white: #ffffff;
-    --text-main: #2b283a;
-    --text-sub: #4a4e74;
-    --blue: #5035ff;
+  --dark: #0b2434;
+  --light: #f5f5f5;
+  --green: #59e391;
+  --white: #ffffff;
+  --text-main: #2b283a;
+  --text-sub: #4a4e74;
+  --blue: #5035ff;
 
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Karla", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Karla", sans-serif;
 }
 
 body {
-    font-size: 1.6rem;
-    background-color: var(--dark);
-    height: 100vh;
-    padding: 3rem 2rem;
+  font-size: 1.6rem;
+  background-color: var(--dark);
+  height: 100vh;
+  padding: 3rem 2rem;
 }
 
 main {
-    background-color: var(--light);
-    border-radius: 10px;
-    height: calc(100vh - 6rem);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+  background-color: var(--light);
+  border-radius: 10px;
+  height: calc(100vh - 6rem);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .title {
-    font-weight: 700;
-    font-size: 4.5rem;
-    line-height: 5rem;
-    letter-spacing: -0.03em;
-    margin-bottom: 1.2rem;
-    color: var(--text-main);
+  font-weight: 700;
+  font-size: 4.5rem;
+  line-height: 5rem;
+  letter-spacing: -0.03em;
+  margin-bottom: 1.2rem;
+  color: var(--text-main);
 }
 
 .instruction {
-    font-family: "Inter", sans-serif;
-    line-height: 3rem;
-    text-align: center;
-    letter-spacing: -0.03em;
-    font-size: 2.3rem;
-    max-width: 500px;
-    color: var(--text-sub);
+  font-family: "Inter", sans-serif;
+  line-height: 3rem;
+  text-align: center;
+  letter-spacing: -0.03em;
+  font-size: 2.3rem;
+  max-width: 500px;
+  color: var(--text-sub);
 }
 
 .die-container {
-    max-width: 400px;
-    width: 90%;
-    display: grid;
-    margin-top: 2.5rem;
-    grid-template: auto auto / repeat(5, 4rem);
-    justify-content: space-between;
-    row-gap: 4rem;
+  max-width: 400px;
+  width: 90%;
+  display: grid;
+  margin-top: 2.5rem;
+  grid-template: auto auto / repeat(5, 4rem);
+  justify-content: space-between;
+  row-gap: 4rem;
 }
 
 .white {
-    background: var(--white);
+  background: var(--white);
 }
 
 .green {
-    background: var(--green);
+  background: var(--green);
 }
 
 .die-face {
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    padding: 2rem 3rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    cursor: pointer;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  padding: 2rem 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 
 .die-value {
-    font-size: 3.8rem;
-    font-weight: 600;
+  font-size: 3.8rem;
+  font-weight: 600;
 }
 
 .roll-btn {
-    background: var(--blue);
-    color: var(--white);
-    border-radius: 4px;
-    box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.18);
-    padding: 1.3rem 4rem;
-    border: none;
-    margin-top: 4rem;
-    font-size: 2rem;
-    outline: none;
-    cursor: pointer;
+  background: var(--blue);
+  color: var(--white);
+  border-radius: 4px;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.18);
+  padding: 1.3rem 4rem;
+  border: none;
+  margin-top: 4rem;
+  font-size: 2rem;
+  outline: none;
+  cursor: pointer;
 }
 
 .roll-btn:active {
-    box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
+  box-shadow: inset 5px 5px 10px -3px rgba(0, 0, 0, 0.7);
 }
 ```
 
@@ -180,14 +221,14 @@ In our component folder, create a file "Die.tsx" and write the following code.
 
 ```javascript
 import React from "react";
-// This does not do anything
+// Just to show that it is a react app
 
 export default function Die() {
-    return (
-        <div className="die-face">
-            <p className="die-value">5</p>
-        </div>
-    );
+  return (
+    <div className="die-face">
+      <p className="die-value">5</p>
+    </div>
+  );
 }
 ```
 
@@ -197,17 +238,17 @@ Let us write a function, generateNewDie, that returns random numbers between 1 a
 
 ```javascript
 function genereateNewDie() {
-    return {
-        value: Math.floor(Math.random() * 6) + 1,
-    };
+  return {
+    value: Math.floor(Math.random() * 6) + 1,
+  };
 }
 
 function allNewDice() {
-    const dieValueArray = [];
-    for (let i = 0; i < 10; i++) {
-        dieValueArray.push(genereateNewDie());
-    }
-    console.log(dieValueArray);
+  const dieValueArray = [];
+  for (let i = 0; i < 10; i++) {
+    dieValueArray.push(genereateNewDie());
+  }
+  console.log(dieValueArray);
 }
 ```
 
@@ -219,16 +260,16 @@ Checking our console, we got
 
 ```javascript
 [
-    { value: 2 },
-    { value: 4 },
-    { value: 2 },
-    { value: 4 },
-    { value: 5 },
-    { value: 5 },
-    { value: 1 },
-    { value: 2 },
-    { value: 6 },
-    { value: 3 },
+  { value: 2 },
+  { value: 4 },
+  { value: 2 },
+  { value: 4 },
+  { value: 5 },
+  { value: 5 },
+  { value: 1 },
+  { value: 2 },
+  { value: 6 },
+  { value: 3 },
 ];
 ```
 
@@ -249,19 +290,19 @@ const [dice, setDice] = useState(allNewDice);
 
 // map dice state and store in a variable
 const mappedDice = dice.map((die) => {
-    return <Die />;
+  return <Die />;
 });
 
 // now add the mappedDice variable to the return jsx in the App.tsx, so the the App.tsx becomes
 return (
-    <main>
-        <h1 className="title">Tenzies</h1>
-        <p className="instruction">
-            Roll until all dice are the same. Click each die to freeze it at its
-            current value between rolls
-        </p>
-        <div className="die-container">{mappedDice}</div>
-    </main>
+  <main>
+    <h1 className="title">Tenzies</h1>
+    <p className="instruction">
+      Roll until all dice are the same. Click each die to freeze it at its
+      current value between rolls
+    </p>
+    <div className="die-container">{mappedDice}</div>
+  </main>
 );
 ```
 
@@ -271,7 +312,7 @@ Due to using map without a key-value pair in variable **mappedDice**, the follow
 Warning: Each child in an array should have a unique key prop
 ```
 
-To fix this error, we would be using an npm package [nanoID](https://www.npmjs.com/package/nanoid) to create custom ID for us.
+To fix this error, we can use the use the index of the elements as the key value but we would be using an npm package [nanoID](https://www.npmjs.com/package/nanoid) to create custom ID for us.
 
 So we install it with **npm i nanoid** and add the following to our App.tsx.
 
@@ -280,14 +321,14 @@ So we install it with **npm i nanoid** and add the following to our App.tsx.
 import { nanoid } from "nanoid";
 
 function genereateNewDie() {
-    return {
-        value: Math.floor(Math.random() * 6) + 1,
-        id: nanoid(),
-    };
+  return {
+    value: Math.floor(Math.random() * 6) + 1,
+    id: nanoid(),
+  };
 }
 
 const mappedDice = dice.map((die) => {
-    return <Die key={die.id} />;
+  return <Die key={die.id} />;
 });
 ```
 
@@ -295,75 +336,77 @@ And the error message is gone.
 
 # Dynamically Rendering the Die Value
 
-Now we are getting values from our state when the component mounts and we need the die component to display this value. So, we want to pass it down as props. Since we are using typescript, we would need to specify the type for the props that will be passed.
+Now, we are getting values from our state when the component mounts and we need the **die** component to display this value. So, we want to pass it down as a prop. Since we are using TypeScript, we would need to specify the type of the props that will be passed.
 
-We update our die component by adding props in the app.tsx and receiving them in the die component jsx.
+To learn more about React with TypeScript, click [here](https://react-typescript-cheatsheet.netlify.app/).
+
+We update our **die** component by adding props in the app.tsx and receiving them in the die component jsx.
 
 ```javascript
 // the Die component in component
 import React from "react";
 
 type DiePropsType = {
-    value: number,
+  value: number,
 };
 
 export default function Die({ value }: DiePropsType) {
-    return (
-        <div>
-            <p className="die-value">{value}</p>
-            {/* if theres an error here saying 'number cannot be assigned to React.Node', then convert the number to string and  replace the 'value' in the paragraph with the new value */}
-        </div>
-    );
+  return (
+    <div>
+      <p className="die-value">{value}</p>
+      {/* if there is an error here saying 'number cannot be assigned to React.Node', then convert the number to string and  replace the 'value' in the paragraph with the new value */}
+    </div>
+  );
 }
 
 // in the app.tsx, we update the mappedDice to
 const mappedDice = dice.map((die) => {
-    return <Die key={die.id} value={die.value} />;
+  return <Die key={die.id} value={die.value} />;
 });
 ```
 
-Next we create a function for rolling of the dice. This would require a button that once clicked it will roll the dice and change the numbers.
+Next, we create a function to roll the dice. This would require a button that, once clicked, will roll the dice and change the numbers.
 
 ```javascript
 //  add to the app.tsx
 function rollDice() {
-    const newRollDice = dice.map((die) => {
-        return genereateNewDie();
-    });
-    setDice(newRollDice);
+  const newRollDice = dice.map((die) => {
+    return genereateNewDie();
+  });
+  setDice(newRollDice);
 }
 
 // add to the jsx of App.tsx after the div with the className of 'die-container'
 <button onClick={rollDice} className="roll-btn">
-    "Roll"
+  Roll
 </button>;
 ```
 
 **rollDice()** maps through the dice state and returns the **generateNewDie()** which will then be saved to the state. Anytime the button is clicked, the **rollDice()** is called and the numbers on the screen change.
 
-# Holding the die
+# Holding the Die
 
 The problem now is that when we click a die we cannot hold that die and generate new numbers for the rest of the die that were not held. So, let us create a function for this.
 
 ```javascript
 // the generateNewDie becomes,
 function genereateNewDie() {
-    return {
-        value: Math.floor(Math.random() * 6) + 1,
-        isHeld: false,
-        id: nanoid(),
-    };
+  return {
+    value: Math.floor(Math.random() * 6) + 1,
+    isHeld: false,
+    id: nanoid(),
+  };
 }
 
 function holdDice(id: string) {
-    const holdedDie = dice.map((die) => {
-        if (die.id === id) {
-            return { ...die, isHeld: !die.isHeld };
-        } else {
-            return die;
-        }
-    });
-    setDice(holdedDie);
+  const holdedDie = dice.map((die) => {
+    if (die.id === id) {
+      return { ...die, isHeld: !die.isHeld };
+    } else {
+      return die;
+    }
+  });
+  setDice(holdedDie);
 }
 ```
 
@@ -373,75 +416,173 @@ For **holdDice()** and **isHeld** to work, they need to be passed as props to th
 
 ```javascript
 const mappedDice = dice.map((die) => {
-    return (
-        <Die
-            key={die.id}
-            value={die.value}
-            isHeld={die.isHeld}
-            id={die.id}
-            hold={holdDice}
-        />
-    );
+  return (
+    <Die
+      key={die.id}
+      value={die.value}
+      isHeld={die.isHeld}
+      id={die.id}
+      hold={holdDice}
+    />
+  );
 });
 
 // in the die component, we need to make sure to accept these props and also specify their types
 type DiePropsType = {
-    value: number,
-    isHeld: boolean,
-    id: string,
-    hold: (id: string) => void,
+  value: number,
+  isHeld: boolean,
+  id: string,
+  hold: (id: string) => void,
 };
 
 export default function Die({ id, value, isHeld, hold }: DiePropsType) {
-    return (
-        <div
-            onClick={() => hold(id)}
-            className={`die-face ${isHeld ? "green" : "white"}`}
-        >
-            <p className="die-value">{value}</p>
-        </div>
-    );
+  return (
+    <div
+      onClick={() => hold(id)}
+      className={`die-face ${isHeld ? "green" : "white"}`}
+    >
+      <p className="die-value">{value}</p>
+    </div>
+  );
 }
 ```
 
-# Winning the game
+# Winning the Game
 
-To win the game, we have to check if all the dice are held and if they all have the same value. if truthy, we change the button text to start a new game. For this, let's write the following.
+To win the game, we have to check if all the dice are held and if they all have the same value. if truthy, we change the button text to start a new game. For this, let's write the following:
 
 ```javascript
 const [tenzies, setTenzies] = React.useState(false);
 
-// using a useEffect because we want the logic to check after the component has mounted
+// using a useEffect because we want to check after the component has mounted
 React.useEffect(() => {
+  const allIsHeld = dice.every((die) => die.isHeld);
+  const firstValue = dice[0].value;
+  const allSameValue = dice.every((die) => die.value === firstValue);
+
+  if (allIsHeld && allSameValue) {
+    setTenzies(true);
+  }
+}, [dice]);
+
+function newGame() {
+  return setTenzies(false), setDice(allNewDice());
+}
+
+// the button
+<button onClick={tenzies ? newGame : rollDice} className="roll-btn">
+  {tenzies ? "New Game" : "Roll"}
+</button>;
+```
+
+We use the higher order function [every](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/every) to check if every object in the array is true, and we select the first value and check if all the values in every object matches it. If truthy, then the game ends and tenzies is set to true, and the button text turns to New Game for the start of a new game.
+
+The **newGame()** function sets tenzies to false and changes the **dice** state to be random numbers.
+
+### Wrapping Up
+
+Just before that, let us display some confetti that will signal to the user that the game has been won. We can do this with [react-confetti](https://www.npmjs.com/package/react-confetti).
+
+We install it with **npm i react-confetti** and import **Confetti** from the package. According to the docs, we need to pass this **Confetti** component height and width props to allow the confetti to work on the full screen. The **windowSize.tsx** file in the hooks folder returns just that, so we can destructure what we need from there.
+
+The codebase becomes
+
+```javascript
+import React from "react";
+import Die from "./components/Die";
+import { nanoid } from "nanoid";
+import Confetti from "react-confetti";
+import useWindowSize from "./hooks/windowSize";
+
+export default function App() {
+  const [dice, setDice] = React.useState(allNewDice());
+  const [tenzies, setTenzies] = React.useState(false);
+  const { width, height } = useWindowSize();
+
+  React.useEffect(() => {
     const allIsHeld = dice.every((die) => die.isHeld);
     const firstValue = dice[0].value;
     const allSameValue = dice.every((die) => die.value === firstValue);
 
     if (allIsHeld && allSameValue) {
-        setTenzies(true);
+      setTenzies(true);
+      console.log("Dice changed");
     }
-}, [dice]);
+  }, [dice]);
 
-function newGame() {
+  const mappedDice = dice.map((die) => {
+    return (
+      <Die
+        key={die.id}
+        value={die.value}
+        isHeld={die.isHeld}
+        id={die.id}
+        hold={holdDice}
+      />
+    );
+  });
+
+  function genereateNewDie() {
+    return {
+      value: Math.floor(Math.random() * 6) + 1,
+      isHeld: false,
+      id: nanoid(),
+    };
+  }
+
+  function allNewDice() {
+    const dieValueArray = [];
+    for (let i = 0; i < 10; i++) {
+      dieValueArray.push(genereateNewDie());
+    }
+    return dieValueArray;
+  }
+
+  function rollDice() {
+    const newRollDice = dice.map((die) => {
+      return die.isHeld ? die : genereateNewDie();
+    });
+    setDice(newRollDice);
+  }
+
+  function holdDice(id: string) {
+    const holdedDie = dice.map((die) => {
+      if (die.id === id) {
+        return { ...die, isHeld: !die.isHeld };
+      } else {
+        return die;
+      }
+    });
+    setDice(holdedDie);
+  }
+
+  function newGame() {
     return setTenzies(false), setDice(allNewDice());
-}
+  }
 
-// the button
-<button onClick={tenzies ? newGame : rollDice} className="roll-btn">
-    {tenzies ? "New Game" : "Roll"}
-</button>;
+  return (
+    <main>
+      {tenzies && <Confetti width={width} height={height} />}
+      <h1 className="title">Tenzies</h1>
+      <p className="instruction">
+        Roll until all dice are the same. Click each die to freeze it at its
+        current value between rolls
+      </p>
+      <div className="die-container">{mappedDice}</div>
+      <button onClick={tenzies ? newGame : rollDice} className="roll-btn">
+        {tenzies ? "New Game" : "Roll"}
+      </button>
+    </main>
+  );
+}
 ```
 
-We use the higher order funtion "every" to check if every object in the array is true and also we select the first value and check if all the values in every object matches it. If truthy, then the game is ends and tenzies is set to true.
-
-# Conclusion
-
-We saw how to build a tenzies game with react-typescript. I hope you learnt something. If you would like to see the complete code, you can do so [here](https://github.com/xyntechx/NexLiber-Projects/tree/main/Tenzies)!
+If you would like to see the complete code, you can do so [here](https://github.com/xyntechx/NexLiber-Projects/tree/main/Tenzies)!
 
 # Discord Community
 
 If you have questions about anything related to NexLiber or this Workbook, you're welcome to ask our community on [Discord](/community)!
 
 export default ({ children }) => (
-    <WorkbookLayout projectTitle="Tenzies" content={children} />
+  <WorkbookLayout projectTitle="Tenzies" content={children} />
 );
