--- a/pages/workbook/ceramic-slate.mdx
+++ b/pages/workbook/ceramic-slate.mdx
@@ -284,7 +284,7 @@ If you would like to see the complete code, check it out on [GitHub](https://git
 
 # Discord Community
 
-If you have questions about anything related to NexLiber or this workbook, you're welcome to ask our community on [Discord](/community)!
+If you have questions about anything related to NexLiber or this Workbook, you're welcome to ask our community on [Discord](/community)!
 
 export default ({ children }) => (
     <WorkbookLayout projectTitle="Ceramic Slate" content={children} />
