--- a/pages/workbook/fresh-jokes.mdx
+++ b/pages/workbook/fresh-jokes.mdx
@@ -20,7 +20,7 @@ Open your project in your favourite text editor/IDE and let the development star
 
 # About the Project
 
-This project is a website built using a new web framework (at the time of writing this workbook) called Fresh (version 1.0.0). The website will generate random jokes from a predetermined array of jokes as well as enable the user to input a joke and display it on the website.
+This project is a website built using a new web framework (at the time of writing this Workbook) called Fresh (version 1.0.0). The website will generate random jokes from a predetermined array of jokes as well as enable the user to input a joke and display it on the website.
 
 Visiting Fresh Jokes, you will see the following page:
 
@@ -230,7 +230,7 @@ If you would like to see the complete code, you can do so [here](https://github.
 
 # Discord Community
 
-If you have questions about anything related to NexLiber or this workbook, you're welcome to ask our community on [Discord](/community)!
+If you have questions about anything related to NexLiber or this Workbook, you're welcome to ask our community on [Discord](/community)!
 
 export default ({ children }) => (
     <WorkbookLayout projectTitle="Fresh Jokes" content={children} />
