--- a/pages/workbook/personal-portfolio-website.mdx
+++ b/pages/workbook/personal-portfolio-website.mdx
@@ -32,7 +32,7 @@ Now, open your project in your favourite code editor/IDE; if you don't have one,
 
 # About the Project
 
-This workbook will guide you through creating your own simple portfolio website using Next.js. The website will look something like this...
+This Workbook will guide you through creating your own simple portfolio website using Next.js. The website will look something like this...
 
 <Pic
     src="https://raw.githubusercontent.com/xyntechx/NexLiber-Projects/main/Personal%20Portfolio%20Website/assets/2.png"
@@ -273,7 +273,7 @@ If you would like to see the complete code, you can do so [here](https://github.
 
 # Discord Community
 
-If you have questions about anything related to NexLiber or this workbook, you're welcome to ask our community on [Discord](/community)!
+If you have questions about anything related to NexLiber or this Workbook, you're welcome to ask our community on [Discord](/community)!
 
 export default ({ children }) => (
     <WorkbookLayout
