--- a/pages/workbook/roygbiv.mdx
+++ b/pages/workbook/roygbiv.mdx
@@ -588,7 +588,7 @@ If you haven't yet, feel free to browse through the complete code [here](https:/
 
 # Discord Community
 
-If you have questions about anything related to NexLiber or this workbook, you're welcome to ask our community on [Discord](/community)!
+If you have questions about anything related to NexLiber or this Workbook, you're welcome to ask our community on [Discord](/community)!
 
 export default ({ children }) => (
     <WorkbookLayout projectTitle="roygbiv" content={children} />
