--- a/pages/workbook/blockchain-explorer.mdx
+++ b/pages/workbook/blockchain-explorer.mdx
@@ -37,7 +37,7 @@ npm install --save ethers
 
 # About the Project
 
-This workbook will guide you through the process of interacting with the blockchain, while introducing you to some of more important technicalities. At the end, you will have a command line interface to query balances, use smart contracts and interact with ERC-20 tokens.
+This Workbook will guide you through the process of interacting with the blockchain, while introducing you to some of more important technicalities. At the end, you will have a command line interface to query balances, use smart contracts and interact with ERC-20 tokens.
 
 # Blockchain: in brief
 
@@ -176,7 +176,7 @@ and finally, change the **address** in **getBalance()** to **requestedAddress**.
 
 # Interacting with ERC-20 Tokens:
 
-Now besides the native currency, some blockchains have smart contracts, which can be used to create a separate token on the same blockchain. In this workbook, we will interact with Dai, a ERC-20 (i.e. non-native) token. Let's first create a new asynchronous function:
+Now besides the native currency, some blockchains have smart contracts, which can be used to create a separate token on the same blockchain. In this Workbook, we will interact with Dai, a ERC-20 (i.e. non-native) token. Let's first create a new asynchronous function:
 
 ```js
 …
@@ -259,7 +259,7 @@ so [here](https://github.com/xyntechx/NexLiber-Projects/tree/main/Blockchain%20E
 
 # Discord Community
 
-If you have questions about anything related to NexLiber or this workbook, you're welcome to ask our community on [Discord](/community)!
+If you have questions about anything related to NexLiber or this Workbook, you're welcome to ask our community on [Discord](/community)!
 
 export default ({ children }) => (
   <WorkbookLayout projectTitle="Blockchain Explorer" content={children} />
